err/simple-translation.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simple_translation'...
Listing './lib/python3.5/site-packages/simple_translation/locale'...
Listing './lib/python3.5/site-packages/simple_translation/locale/en'...
Listing './lib/python3.5/site-packages/simple_translation/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/simple_translation/locale/nb'...
Listing './lib/python3.5/site-packages/simple_translation/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/simple_translation/static'...
Listing './lib/python3.5/site-packages/simple_translation/static/simple_translation'...
Listing './lib/python3.5/site-packages/simple_translation/templates'...
Listing './lib/python3.5/site-packages/simple_translation/templates/simple_translation'...
Listing './lib/python3.5/site-packages/simple_translation/templatetags'...
Listing './lib/python3.5/site-packages/simple_translation/test'...
Listing './lib/python3.5/site-packages/simple_translation/test/testapp'...
Listing './lib/python3.5/site-packages/simple_translation/test/testapp/templates'...
Listing './lib/python3.5/site-packages/simple_translation/test/testapp/templates/testapp'...
Compiling './lib/python3.5/site-packages/simple_translation/test/testcases.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (testcases.py, line 135)
Compiling './lib/python3.5/site-packages/simple_translation/translation_pool.py'...
***   File "./lib/python3.5/site-packages/simple_translation/translation_pool.py", line 46
    raise TranslationAllreadyRegistered, \
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simple_translation-0.8.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
